fixed get in touch btn width on mobile

--- a/css/layout/_navbar.scss
+++ b/css/layout/_navbar.scss
@@ -127,7 +127,7 @@
         font-size: 1rem;
 
         &.show {
-          width: 100%;
+          max-width: 100%;
         }
       }
     }
